test/modules/bradc/userInsteadOfStandard/foo2.good
warning: Ambiguous module source file -- using ./AutoMath.chpl over $CHPL_HOME/modules/standard/AutoMath.chpl
foo2.chpl:3: error: unresolved call 'testmath()'
foo2.chpl:3: note: because no functions named testmath found in scope
