test/modules/bradc/userInsteadOfStandard/foo2.chpl
use AutoMath;

testmath();
writeln("In my foo2");
